docs: enhance documentation with comprehensive Valhalla information
- Add detailed explanation of Project Valhalla features and benefits
- Add platform support matrix showing all tested configurations
- Expand automated update workflow with step-by-step process
- Add comprehensive resources section with official docs, specs, and community links
- Document performance benefits and use cases for Valhalla
- Include manual trigger instructions for updates
- Add preview feature usage examples

Provides users with complete understanding of:
- What Project Valhalla is and why it matters
- Multi-platform support (macOS ARM64/x64, Linux ARM64/x64)
- How automated updates work
- Where to find additional learning resources

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>